<resources>
    <string name="app_name">Calculator</string>
    <string name="divide">/</string>
    <string name="multiplication">*</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ac">ac</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="sum">+</string>
    <string name="substraction">-</string>
    <string name="point">.</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="sum">+</string>
    <string name="substraction">-</string>
    <string name="multiplication">*</string>
    <string name="divide">/</string>
</resources>
